--- a/ProjetoSite/index.html
+++ b/ProjetoSite/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aa Melhores Marcas</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div id="root"></div>
+    <img id="page-icon" src="https://img.icons8.com/color/48/000000/rocket--v1.png" alt="Ícone da Página">
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
