filtro e atualização de layout

--- a/ProjetoSite/index.html
+++ b/ProjetoSite/index.html
@@ -7,7 +7,7 @@
     <title>Aa Melhores Marcas</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
-  <body>
+  <body class="corpo">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
